css/globals.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
@import url("topnav.css");
@import url('https://use.fontawesome.com/releases/v6.4.0/css/all.css');

@font-face {
    font-family: "Font Awesome 6 Free-Solid";
    font-style: normal;
    font-weight: 400;
    src: url("../fonts/Font Awesome 6 Free-Solid-900.otf") format("opentype");
}

body {
    margin: 0;
    background: #ffffff;
    --header-height: 80px;
    font-family: var(--font-family-montserrat);
}

.screen {
    /* since we are using absolute positioning for header, not sticky, all pages must have these 80px in the top reserved so that to not get content covered */
    margin-top: var(--header-height);
    /* isolate internal z-index manipulations from conflicting with outside components (sticky header) */
    z-index: 0;
}

.footer-navbar {
    align-items: center;
    background-color: var(--submarine);
    display: flex;
    flex-direction: column;
    gap: 24px;
    padding: 18px 24px;
}

.footer-logo-and-links-flex {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 18px;
}

.footer-logo {
    padding: 1em;
    width: 144px;
    height: 80px;
    object-fit: fill;
}

.footer-links {
    align-items: center;
    gap: 40px;
    display: flex;
    text-align: center;
    flex-wrap: wrap;
}

.footer-links a {
    flex: 1;
    color: #141414;
    font-weight: 500;
}

.grayscale {
    filter: grayscale(100%);
}

.all-rights-reserved-section {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.social-media-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 16px;
    align-items: flex-start;
    height: 32px;
}

.screen a {
    text-decoration: none;
}

.container-center-horizontal {
    width: 100%;
}

.auto-animated .container-center-vertical,
.auto-animated .container-center-horizontal {
    opacity: 1;
}

.valign-text-middle {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.listeners-active,
.listeners-active * {
    pointer-events: auto;
}

.hidden,
.hidden * {
    pointer-events: none;
    visibility: hidden;
}

.listeners-active-click,
.listeners-active-click * {
    cursor: pointer;
}

* {
    box-sizing: border-box;
}

.navbar-link-our-services {
    letter-spacing: 0;
    line-height: normal;
    margin-top: -1.00px;
    position: relative;
    width: fit-content;
}

.navbar-link-find-jobs {
    letter-spacing: 0;
    line-height: normal;
    margin-top: -1.00px;
    position: relative;
    width: fit-content;
}

.log-in {
    letter-spacing: 0;
    line-height: normal;
    margin-bottom: 2.0px;
    min-height: 20px;
    min-width: 50px;
}

.register-now {
    letter-spacing: 0;
    line-height: normal;
    margin-top: -1.00px;
    position: relative;
    width: fit-content;
}

.span0 {
    color: var(--meliteh-black-type);
}

.available-vacancies {
    color: #000000b2;
    font-family: var(--font-family-montserrat);
    font-size: var(--font-size-l);
    font-weight: 500;
    letter-spacing: 0;
    line-height: 27px;
    position: relative;
    width: fit-content;
}

.frame-405 {
    align-items: flex-start;
    display: flex;
    flex: 1;
    position: relative;
}

.place {
    letter-spacing: 0;
    line-height: normal;
    margin-top: -1.00px;
    position: relative;
    width: fit-content;
}

.featured {
    letter-spacing: 0;
    line-height: normal;
    margin-top: -1.00px;
    position: relative;
    width: fit-content;
}

.breadcrumbs-industry-name {
    font-weight: 700;
    color: var(--meliteh-red-semitransparent);
    font-size: var(--font-size-xs);
}

.content {
    align-items: flex-start;
    background-color: var(--neutral100);
    display: flex;
    flex-direction: column;
    gap: 8px;
    left: 0;
    padding: 48px 64px 64px;
    position: absolute;
    top: 0;
    width: 1440px;
}

.frame-15 {
    align-items: flex-start;
    align-self: stretch;
    display: flex;
    gap: 32px;
    position: relative;
}

.frame-36 {
    align-items: flex-start;
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 16px;
    position: relative;
}

.group-1 {
    background-color: var(--meliteh-red-semitransparent);
    border-radius: 8px;
    box-shadow: 0px 1px 1px #00000014;
    height: 16px;
    min-width: 16px;
    position: relative;
}

.ellipse-7 {
    background-color: var(--neutral100);
    border-radius: 4px;
    height: 8px;
    left: 4px;
    position: relative;
    top: 4px;
    width: 8px;
}

.salary-yearly {
    align-self: stretch;
    letter-spacing: 0;
    line-height: 27px;
    margin-top: -1.00px;
    position: relative;
    white-space: nowrap;
}

.group-39232 {
    height: 96px;
    min-width: 202px;
    position: relative;
}

.frame-39240 {
    align-items: flex-start;
    display: flex;
    flex-direction: column;
    position: relative;
    width: fit-content;
}

.group-39233 {
    height: 28px;
    min-width: 64px;
    position: relative;
}

.frame-8396 {
    align-items: center;
    background-color: var(--meliteh-red-semitransparent);
    border-radius: 64px;
    display: flex;
    height: 24px;
    justify-content: center;
    width: 64px;
}

.group-39234 {
    height: 24px;
    min-width: 202px;
    position: relative;
}

.rectangle-4379 {
    background-color: var(--meliteh-red-semitransparent);
    border-radius: 10px;
    height: 8px;
    left: 12px;
    opacity: 0.2;
    position: absolute;
    top: 8px;
    width: 190px;
}

.rectangle-4380 {
    background-color: var(--meliteh-red-semitransparent);
    border-radius: 10px;
    height: 8px;
    left: 12px;
    position: absolute;
    top: 8px;
    width: 94px;
}
/* ... */

